2012-08-02  Adam Barth  <abarth@webkit.org>

        The generic bindings shouldn't use templates
        https://bugs.webkit.org/show_bug.cgi?id=93016

        Reviewed by Eric Seidel.

        We originally created the generic bindings to share code between the
        JavaScriptCore and V8 bindings. However, the code came out sort of ugly
        because we used templates (with the idea that templates would let us
        use more than one scripting engine).

        This patch rips out the templates in an attempt to make the code
        prettier and therefore easier to use in both V8 and JSC. I've tried to
        keep this patch small by remaning things mostly in place. In the next
        patch, I'll move a bunch of code out of headers and into cpp files.

        No behavior change.

        * GNUmakefile.am:
        * UseV8.cmake:
        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.pri:
        * bindings/generic/BindingSecurity.h:
        (WebCore):
        (BindingSecurity):
        (WebCore::BindingSecurity::canAccessWindow):
        (WebCore::BindingSecurity::canAccessFrame):
        (WebCore::BindingSecurity::shouldAllowAccessToNode):
        (WebCore::BindingSecurity::allowPopUp):
        (WebCore::BindingSecurity::allowSettingFrameSrcToJavascriptUrl):
        (WebCore::BindingSecurity::allowSettingSrcToJavascriptURL):
        * bindings/generic/GenericBinding.h:
        (WebCore::completeURL):
        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateDomainSafeFunctionGetter):
        (GenerateNormalAttrGetter):
        (GenerateReplaceableAttrSetter):
        (GenerateFunctionCallback):
        (GenerateImplementation):
        * bindings/scripts/test/V8/V8Float64Array.cpp:
        * bindings/scripts/test/V8/V8TestActiveDOMObject.cpp:
        (WebCore::TestActiveDOMObjectV8Internal::excitingFunctionCallback):
        (WebCore::TestActiveDOMObjectV8Internal::postMessageAttrGetter):